--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   get: ^4.7.2
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.2.1
+  scroll_date_picker: ^3.8.0
 
 dev_dependencies:
   flutter_test:
